# path-of-exile-2-item-filter

./: .editorconfig  .gitignore  .gitlab-ci.yml  config.json  makefile  pyproject.toml  readme.md
AmbientImpactItemFilter/: .gitignore  config.json
AmbientImpactItemFilter/assets/logo/: readme.md
AmbientImpactItemFilter/sounds/BexBloopers/: sounds.json
AmbientImpactItemFilter/sounds/bex_bloopers/: readme.md  sounds.json
AmbientImpactItemFilter/sounds/drawfee/: readme.md
AmbientImpactItemFilter/sounds/secret_sleepover_society/: sounds.json
AmbientImpactItemFilter/templates/: .gitignore  config.json  main.filter.j2  main.j2
AmbientImpactItemFilter/templates/groups/: ascendency_items.filter.j2  ascendency_items.j2  bases.filter.j2  belt_items.filter.j2  belt_items.j2  currency.filter.j2  currency.j2  defaults.j2  endgame_items.filter.j2  endgame_items.j2  gems.filter.j2  gems.j2  jewellery.filter.j2  jewels.filter.j2  league_specific_items.j2  leagues.filter.j2  leagues.j2  quest_items.filter.j2  quest_items.j2  salvage_materials.filter.j2  socketables.filter.j2  socketables.j2  trinkets.j2  uniques.filter.j2  uniques.j2  watchlist.filter.j2
AmbientImpactItemFilter/templates/groups/leagues/: breach.filter.j2  breach.j2  delirium.filter.j2  delirium.j2  expedition.filter.j2  expedition.j2  index.filter.j2  ritual.filter.j2
AmbientImpactItemFilter/templates/macros/: colour.filter.j2  sound.filter.j2  sound.j2  tier_scheme.filter.j2  tiered_scheme.filter.j2  utilities.filter.j2
sounds/bex_bloopers/: sounds.json
sounds/drawfee/: sounds.json
sounds/secret_sleepover_society/: readme.md
templates/: main.filter.j2
templates/groups/: ascendency_items.filter.j2  belt_items.filter.j2  currency.filter.j2  defaults.filter.j2  jewellery.filter.j2  jewels.filter.j2  quest_items.filter.j2  socketables.filter.j2  uniques.filter.j2  watchlist.filter.j2
templates/groups/leagues/: breach.filter.j2  expedition.filter.j2  index.filter.j2
templates/macros/: colour.filter.j2
