[project]
name = "Ambient.Impact.filter"
license = "GPL-3.0-or-later"
requires-python = ">=3.9,<4.0"
dependencies = [
  "jinja2-cli (>=0.8)",
  'poe_tiered_scheme'
]

[project.urls]
Homepage = "https://gitlab.com/Ambient.Impact/path-of-exile-2-item-filter"
Documentation = "https://gitlab.com/Ambient.Impact/path-of-exile-2-item-filter/-/wikis/home"
Repository = "https://gitlab.com/Ambient.Impact/path-of-exile-2-item-filter.git"
Issues = "https://gitlab.com/Ambient.Impact/path-of-exile-2-item-filter/-/issues"

[tool.poetry]
package-mode = false
packages = [
  { include = 'poe_tiered_scheme', from = 'AmbientImpactItemFilter/packages' },
]

[tool.poetry.dependencies]
poe_tiered_scheme = { path = './AmbientImpactItemFilter/packages/poe_tiered_scheme/', develop = true }
